test/spec_vectors/loop/fail/module_32.wat
(module (func $type-param-void-vs-nums (loop (param i32 f64) (drop) (drop))))